// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<div>
  <mock-box
    classname="makeStyles-card-1"
  >
    <mock-box
      mb="3"
    >
      <mock-typography
        color="textSecondary"
        variant="h5"
      >
        <mock-hidden
          xsdown="true"
        >
          Featured Site
          <a
            href="/reefs/2"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-launchIcon-4"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </mock-hidden>
        <mock-hidden
          smup="true"
        >
          <mock-box
            classname="makeStyles-mobileTitle-5"
          >
            Featured Site
            <a
              href="/reefs/2"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-launchIcon-4"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </a>
          </mock-box>
        </mock-hidden>
      </mock-typography>
    </mock-box>
    <mock-card>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-9"
          style="margin-bottom: 2rem; max-height: 14rem;"
        >
          <mock-box
            fontweight="400"
            pb="0.5rem"
            pl="0.5rem"
          >
            <mock-typography
              color="textSecondary"
              variant="subtitle1"
            >
              MEAN DAILY SURFACE TEMP. (°C)
            </mock-typography>
          </mock-box>
          Mock-Line
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
          style="display: flex;"
        >
          <div
            class="makeStyles-metricsContainer-3"
          >
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                SURFACE TEMP
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                29.0
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   °C
                </mock-typography>
              </mock-typography>
            </div>
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                TEMP AT 0m
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                39.0
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   °C
                </mock-typography>
              </mock-typography>
            </div>
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                HEAT STRESS
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                4.9
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   DHW
                </mock-typography>
              </mock-typography>
            </div>
          </div>
        </div>
      </div>
    </mock-card>
  </mock-box>
</div>
`;

exports[`renders loading as expected 1`] = `
<div>
  <mock-box
    classname="makeStyles-card-6"
  >
    <mock-box
      mb="3"
    >
      <mock-typography
        color="textSecondary"
        variant="h5"
      >
        <mock-hidden
          xsdown="true"
        >
          Selected Site
          <a
            href="/reefs/2"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-launchIcon-9"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </mock-hidden>
        <mock-hidden
          smup="true"
        >
          <mock-box
            classname="makeStyles-mobileTitle-10"
          >
            Selected Site
            <a
              href="/reefs/2"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root makeStyles-launchIcon-9"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
              </svg>
            </a>
          </mock-box>
        </mock-hidden>
      </mock-typography>
    </mock-box>
    <mock-card>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-9"
          style="margin-bottom: 2rem; max-height: 14rem;"
        >
          <mock-box
            fontweight="400"
            pb="0.5rem"
            pl="0.5rem"
          >
            <mock-typography
              color="textSecondary"
              variant="subtitle1"
            >
              MEAN DAILY SURFACE TEMP. (°C)
            </mock-typography>
          </mock-box>
          Mock-Line
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-3"
          style="display: flex;"
        >
          <div
            class="makeStyles-metricsContainer-8"
          >
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                SURFACE TEMP
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                29.0
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   °C
                </mock-typography>
              </mock-typography>
            </div>
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                TEMP AT 0m
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                39.0
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   °C
                </mock-typography>
              </mock-typography>
            </div>
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                HEAT STRESS
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                4.9
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   DHW
                </mock-typography>
              </mock-typography>
            </div>
          </div>
        </div>
      </div>
    </mock-card>
  </mock-box>
</div>
`;
